anthosconfig/namespaces/product-catalog/product-catalog.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: product-catalog
  labels: 
    istio-injection: enabled
