anthosconfig/namespaces/product-catalog/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productcatalog-destination
  namespace: product-catalog
spec:
  host: productcatalogservice.product-catalog.svc.cluster.local
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
