anthosconfig/namespaces/product-catalog/virtual_service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: productcatalogvirtualservice
  namespace: product-catalog
spec:
  gateways:
  - mesh
  hosts:
  - productcatalogservice.product-catalog.svc.cluster.local
  http:
  - route:
    - destination:
        host: productcatalogservice.product-catalog.svc.cluster.local
        subset: v1
      weight: 0
    - destination:
        host: productcatalogservice.product-catalog.svc.cluster.local
        subset: v2
      weight: 100
